syntax = "proto3";
package heimdallv2.chainmanager;

import "gogoproto/gogo.proto";
import "amino/amino.proto";

option go_package = "github.com/0xPolygon/heimdall-v2/x/chainmanager/types";

message ChainParams {
  option (gogoproto.equal) = true;
  string bor_chain_id = 1 [ (amino.dont_omitempty) = true ];
  string pol_token_address = 2 [ (amino.dont_omitempty) = true ];
  string staking_manager_address = 3 [ (amino.dont_omitempty) = true ];
  string slash_manager_address = 4 [ (amino.dont_omitempty) = true ];
  string root_chain_address = 5 [ (amino.dont_omitempty) = true ];
  string staking_info_address = 6 [ (amino.dont_omitempty) = true ];
  string state_sender_address = 7 [ (amino.dont_omitempty) = true ];
  string state_receiver_address = 8 [ (amino.dont_omitempty) = true ];
  string validator_set_address = 9 [ (amino.dont_omitempty) = true ];
}

message Params {
  option (gogoproto.equal) = true;
  ChainParams chain_params = 1
      [ (amino.dont_omitempty) = true, (gogoproto.nullable) = false ];
  uint64 main_chain_tx_confirmations = 2 [ (amino.dont_omitempty) = true ];
  uint64 bor_chain_tx_confirmations = 3 [ (amino.dont_omitempty) = true ];
}
